# heart_disease_prediction

./: CHECKLIST.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  DIRECTORY_STRUCTURE.txt  GET_STARTED.md  PROJECT_SUMMARY.md  README.md  SETUP.md  firebase.json  pubspec.yaml  quickstart.bat  quickstart.sh
android/app/: build.gradle.kts  google-services.json
heart_disease_api/: .gitignore  QUICKSTART.py  README.md  SETUP_COMPLETE.txt  pyproject.toml  requirements.txt  run.py  test_api.py
heart_disease_api/app/: main.py
heart_disease_api/app/api/: predict.py  test.py
heart_disease_api/app/core/: config.py
heart_disease_api/app/models/: ml_model.py  predictor.py
heart_disease_api/app/schemas/: heart.py
heart_disease_api/app/utils/: preprocessing.py
heart_disease_api/artifacts/: .gitkeep  heart-disease-prediction-knn-model.pkl  scaler.pkl
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/blocs/: assessment_bloc.dart  assessment_event.dart  assessment_state.dart  profile_bloc.dart  profile_event.dart  profile_state.dart
lib/config/: app_colors.dart  app_constants.dart
lib/datasource/: datafrom_remote_source.dart
lib/models/: health_assessment.dart  prediction_response.dart  user_profile.dart
lib/screens/: about_heart_disease_screen.dart  analyzing_screen.dart  auth_gate.dart  check_screen.dart  explain_screen.dart  heart_health_tips_screen.dart  history_screen.dart  home_screen.dart  log_in_screen.dart  profile_screen.dart  result_screen.dart  splash_screen.dart
lib/utils/: helpers.dart  (+2 more)
test/: widget_test.dart
(+14 files in other folders)
