[project]
name = "heart-disease-api"
version = "1.0.0"
description = "API for predicting heart disease using machine learning"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "joblib>=1.3.2",
    "numpy>=1.24.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.6.1",
    "uvicorn[standard]>=0.27.0",
]
